[gd_scene load_steps=24 format=3 uid="uid://cfmoyqsml8q7y"]

[ext_resource type="Script" path="res://Scripts/chick.gd" id="1_1uawa"]
[ext_resource type="Texture2D" uid="uid://3t3r1h0bbuf" path="res://Assets/Art/Entities/Chick1.png" id="1_kt0cl"]
[ext_resource type="Texture2D" uid="uid://bxc856nn58bbb" path="res://Assets/Art/Entities/Chick2.png" id="2_mrypm"]
[ext_resource type="PackedScene" uid="uid://ctr2k5x0nnwo8" path="res://Nodes/egg.tscn" id="2_q2hv8"]
[ext_resource type="Texture2D" uid="uid://blsxy1rj8i246" path="res://Assets/Art/Entities/Chick3.png" id="3_mpmc2"]
[ext_resource type="Texture2D" uid="uid://dqtxgjcbv8s21" path="res://Assets/Art/Particles/White_Circle.svg.png" id="4_2lbl0"]
[ext_resource type="Texture2D" uid="uid://452hci5ywni3" path="res://Assets/Art/Entities/Chicken/Untitled_Artwork-15.png" id="5_mvxl4"]
[ext_resource type="Texture2D" uid="uid://ceu08pay13sb1" path="res://Assets/Art/Entities/Chicken/Untitled_Artwork-16.png" id="6_oam8c"]
[ext_resource type="Texture2D" uid="uid://c6lsbs45lsa8y" path="res://Assets/Art/Entities/Chicken/Untitled_Artwork-17.png" id="7_kfkiw"]
[ext_resource type="Texture2D" uid="uid://cxix7fwmosfj2" path="res://Assets/Art/Entities/Chicken/Untitled_Artwork-18.png" id="8_pdfiq"]
[ext_resource type="Texture2D" uid="uid://cdroi4okswyf8" path="res://Assets/Art/UI/heart.png" id="12_kncox"]
[ext_resource type="Texture2D" uid="uid://c1hr8dplnyoj7" path="res://Assets/Art/Entities/Chicken/superchicken1.png" id="14_jc6qc"]
[ext_resource type="Script" path="res://Scripts/pet_zone.gd" id="15_syx7u"]
[ext_resource type="Texture2D" uid="uid://cde2dbsxqeoop" path="res://Assets/Art/Entities/Chicken/superchicken2.png" id="15_u1e57"]
[ext_resource type="Texture2D" uid="uid://vik6ucq1ki13" path="res://Assets/Art/UI/cry.png" id="16_tp2r3"]
[ext_resource type="Texture2D" uid="uid://i5blv2gi0uog" path="res://Assets/Art/Entities/Chicken/superchicken4.png" id="16_w5vbf"]
[ext_resource type="Texture2D" uid="uid://cry7mn14qjruy" path="res://Assets/Art/Entities/Chicken/superchicken3.png" id="17_ud2ov"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ifick"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_kt0cl")
}, {
"duration": 1.0,
"texture": ExtResource("2_mrypm")
}, {
"duration": 1.0,
"texture": ExtResource("3_mpmc2")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wgd4r"]
size = Vector2(80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_k6cvq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_mvxl4")
}, {
"duration": 1.0,
"texture": ExtResource("6_oam8c")
}, {
"duration": 1.0,
"texture": ExtResource("7_kfkiw")
}, {
"duration": 1.0,
"texture": ExtResource("8_pdfiq")
}],
"loop": true,
"name": &"walk",
"speed": 9.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_6wqnj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_jc6qc")
}, {
"duration": 1.0,
"texture": ExtResource("15_u1e57")
}, {
"duration": 1.0,
"texture": ExtResource("16_w5vbf")
}, {
"duration": 1.0,
"texture": ExtResource("17_ud2ov")
}],
"loop": true,
"name": &"walk",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yug2d"]
size = Vector2(96, 88)

[sub_resource type="CircleShape2D" id="CircleShape2D_770pu"]
radius = 32.0

[node name="Chicken" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_1uawa")
egg = ExtResource("2_q2hv8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
position = Vector2(0, 16)
scale = Vector2(0.65, 0.65)
sprite_frames = SubResource("SpriteFrames_ifick")
animation = &"walk"

[node name="Shadow" type="Sprite2D" parent="AnimatedSprite2D"]
modulate = Color(0, 0, 0.156863, 0.203922)
z_index = -1
position = Vector2(2, 30)
scale = Vector2(0.160627, 0.0284301)
texture = ExtResource("4_2lbl0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wgd4r")

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(10, -29)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_k6cvq")
animation = &"walk"

[node name="Shadow" type="Sprite2D" parent="AnimatedSprite2D2"]
modulate = Color(0, 0, 0.156863, 0.203922)
z_index = -1
position = Vector2(-16.1457, 131.184)
scale = Vector2(0.434899, 0.039)
texture = ExtResource("4_2lbl0")

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(10, -29)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_6wqnj")
animation = &"walk"
frame = 3
frame_progress = 0.177218

[node name="Shadow" type="Sprite2D" parent="AnimatedSprite2D3"]
modulate = Color(0, 0, 0.156863, 0.203922)
z_index = -1
position = Vector2(-16.1457, 131.184)
scale = Vector2(0.434899, 0.039)
texture = ExtResource("4_2lbl0")

[node name="kura" type="Timer" parent="."]
wait_time = 22.0
one_shot = true

[node name="PetZone" type="Area2D" parent="." groups=["interactable"]]
script = ExtResource("15_syx7u")

[node name="PetShape" type="CollisionShape2D" parent="PetZone"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_yug2d")

[node name="Sad" type="Sprite2D" parent="PetZone/PetShape"]
z_index = 2
position = Vector2(3.8147e-06, -60)
scale = Vector2(0.2375, 0.2375)
texture = ExtResource("16_tp2r3")

[node name="Heart" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 2
position = Vector2(0, -64)
scale = Vector2(0.3, 0.3)
texture = ExtResource("12_kncox")

[node name="FoxZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="shape" type="CollisionShape2D" parent="FoxZone"]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_770pu")

[node name="Timer2" type="Timer" parent="."]

[connection signal="timeout" from="kura" to="." method="_grow_up"]
[connection signal="area_entered" from="FoxZone" to="." method="_die"]
